# python-pdftables-api

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci-build.yml
pdftables_api/: __init__.py  pdftables_api.py
test/: pdf_to_html_test.py  test_pdftables_api.py
