[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftables-api"
version = "2.0.0"
description = "PDFTables.com Python API library."
readme = "README.md"
license = { text = "Apache License 2.0" }
keywords = ["pdf", "tables", "excel", "csv", "xml", "api"]
authors = [ { name = "The Sensible Code Company", email = "support@sensiblecode.io" } ]
urls = { "Homepage" = "https://github.com/sensiblecode/python-pdftables-api" }
dependencies = ["requests"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking",
]

[project.optional-dependencies]
tests = ["requests_mock"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdftables_api"]
