[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftables-api"
version = "2.0.0"
requires-python = ">=3.10"
description = "PDFTables.com Python API library."
readme = "README.md"
license = { text = "Apache License 2.0" }
keywords = ["pdf", "tables", "excel", "csv", "xml", "api"]
authors = [ { name = "The Sensible Code Company", email = "support@sensiblecode.io" } ]
urls = { "Homepage" = "https://github.com/sensiblecode/python-pdftables-api" }
dependencies = ["requests"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Networking",
]

[dependency-groups]
dev = [
    "pytest",
    "requests-mock",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdftables_api"]

[tool.uv]
required-version = ">=0.9"
